# GOLOpenGL

./: .gitignore  CMakeLists.txt  README.md  golFragment.glsl  main.cpp  renderFragment.glsl  renderVertex.glsl  shader.cpp
